changed the top two

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Merge Conflicts</h1>
-<p>I learned that I'm a 0.5</p>
+<h1>Moige Conflicts</h1>
+<p>I learned that I'm special! (Ralphie voice)</p>
